fix WithThroughUserRegistrationApiTest